Use latest version of Redis. Use Symfony 2.8

--- a/nginx/vhost.conf
+++ b/nginx/vhost.conf
@@ -1,7 +1,7 @@
 server {
         listen       80;
 
-        server_name   machine;
+        server_name   symfony.dev;
         #access_log   /var/log/nginx/symfony-access.log;
         #error_log    /var/log/nginx/symfony-error.log;
 
