--- a/symfony/code/app/config/parameters.yml.dist
+++ b/symfony/code/app/config/parameters.yml.dist
@@ -19,3 +19,5 @@ parameters:
     debug_toolbar:          true
     debug_redirects:        false
     use_assetic_controller: true
+    redis_address: redis
+    redis_port: 6379
