--- a/symfony/code/composer.json
+++ b/symfony/code/composer.json
@@ -19,7 +19,7 @@
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
         "snc/redis-bundle": "~1.1",
-        "predis/predis": "~0.8"
+        "predis/predis": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
